--- a/src/app/face-snap/face-snap.html
+++ b/src/app/face-snap/face-snap.html
@@ -1,4 +1,5 @@
 <h2>{{ title }}</h2>
+<img src="{{ imageUrl }}" alt="{{ title }}">
 <p>Mis en ligne le {{ createdAt | date }}</p>
 <p>{{ description }}</p>
 <p>🤌 {{ snaps }}</p>
